--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "homepage_password": "admin123",
+  "homepage_password": "admin@1234",
   "cache_time": 7200,
   "api_site": {
     "dyttzy": {
