--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "homepage_password": "admin@1234",
   "cache_time": 7200,
-  "api_site": {
+    "api_site": {
     "dyttzy": {
       "api": "http://caiji.dyttzyapi.com/api.php/provide/vod",
       "name": "电影天堂资源",
@@ -13,7 +13,7 @@
       "detail": "https://heimuer.tv"
     },
     "ruyi": {
-      "api": "http://cj.rycjapi.com/api.php/provide/vod",
+      "api": "https://cj.rycjapi.com/api.php/provide/vod",
       "name": "如意资源"
     },
     "bfzy": {
