--- a/config.json
+++ b/config.json
@@ -10,25 +10,10 @@
       "api": "https://cj.lziapi.com/api.php/provide/vod",
       "name": "量子资源站"
     },
-"hnzy": {
-      "api": "https://hnzyapi.com/api.php/provide/vod",
-      "name": "火鸟资源"
-    },
-    "lzzy": {
-      "api": "https://api.liangzizy.com/inc/apijson_vod.php",
-      "name": "量子资源"
-    },
-    "ffzy": {
-      "api": "https://ffzyapi.com/api.php/provide/vod",
-      "name": "非凡资源"
-    },
-    "ykzy": {
-      "api": "https://api.yongjiuzy.cc/provide/vod",
-      "name": "永久资源"
-    },
-    "bdzy": {
-      "api": "https://api.1080zyku.com/inc/apijson_vod.php",
-      "name": "百度资源"
-    }
+    "dyttzy": {
+    "api": "http://caiji.dyttzyapi.com/api.php/provide/vod",
+    "name": "电影天堂资源",
+    "detail": "http://caiji.dyttzyapi.com"
+  }
   }
 }
